# blob-storage-scalable

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  api.py  consumer.py  db.py  main.py  requirements.txt  storage.py
client/: Dockerfile  upload_file.py
consumer/: Dockerfile  consumer.py  requirements.txt
